# vela

./: .env  .gitignore  Cargo.toml  README.md
db/: readme.md  up.sh
db/migrates/: 0001.initial_db.up.sql
migration/: Cargo.toml  gen_entity.sh
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260206_020910_sys_job.rs  m20260207_124414_init.rs  m20260211_014728_corn_job.rs
src/: app.rs  banner.rs  lib.rs  main.rs
src/common/: Cargo.toml  error.rs
src/common/src/: error.rs  lib.rs  snowflake_id.rs  traits.rs  validated_query.rs
src/common/src/config/: config.rs
src/common/src/logger/: logger.rs  mod.rs
src/conf/: config.dev.yaml  development.yaml
src/domain/job/: Cargo.toml
src/domain/job/src/: lib.rs
src/domain/job/src/api/: mod.rs  traits.rs
src/domain/job/src/commons/: error.rs  mod.rs
src/domain/job/src/entity/: job.rs  mod.rs
src/domain/job/src/repository/: job.rs  mod.rs
src/domain/job/src/services/: mod.rs  service.rs
src/domain/operater_log/: Cargo.toml
src/domain/operater_log/src/: lib.rs
src/domain/operater_log/src/api/: traits.rs
src/domain/operater_log/src/entity/: mod.rs
src/domain/operater_log/src/repository/: mod.rs
src/domain/operater_log/src/services/: mod.rs
src/domain/user/: Cargo.toml
src/domain/user/src/: lib.rs
src/domain/user/src/api/: traits.rs
src/domain/user/src/api/dto/: auth.rs  mod.rs  user_info.rs
src/domain/user/src/commons/: error.rs
src/domain/user/src/entity/: captcha.rs  user.rs
src/domain/user/src/repository/: cache.rs  encrypt.rs  mod.rs  user.rs
src/domain/user/src/services/: service.rs
src/infrastructure/: Cargo.toml  gen_entity.sh
src/infrastructure/cache/: Cargo.toml
src/infrastructure/cache/src/: lib.rs  redis.rs
src/infrastructure/config/: Cargo.toml  config.rs  mod.rs
src/infrastructure/config/src/: config.rs  lib.rs
src/infrastructure/logger/: Cargo.toml  mod.rs
src/infrastructure/logger/src/: lib.rs  logger.rs
src/infrastructure/persistence/: Cargo.toml
src/infrastructure/persistence/src/: id_gen.rs  init.rs
src/infrastructure/src/: lib.rs
src/infrastructure/src/cache/: memory.rs  mod.rs  redis.rs
src/infrastructure/src/config/: config.rs
src/infrastructure/src/container/: job_domain.rs  mod.rs  operater_log_domain.rs  sys_domain.rs  user_domain.rs
src/infrastructure/src/cron_scheduled/: cron_scheduled.rs  mod.rs
src/infrastructure/src/encrypt/: mod.rs  pwd_encrypt.rs
src/infrastructure/src/logger/: logger.rs
src/infrastructure/src/persistence/: corn_job.rs  id_gen.rs  init.rs  mod.rs  sys_oper_log_repo.rs  user_repo.rs
src/infrastructure/src/persistence/entities/: corn_job.rs  mod.rs  prelude.rs  sys_oper_log.rs  users.rs
src/infrastructure/src/processor/: cron_scheduled.rs  init.rs  job.rs  mod.rs  periodic.rs  processor.rs  scheduled.rs  unit_of_work.rs  worker.rs
src/infrastructure/src/processor/wokers/: job_worker.rs  mail_worker.rs  mod.rs
src/interfaces/: Cargo.toml
src/interfaces/src/: init.rs  lib.rs  resp.rs
src/interfaces/src/common/: jwt.rs  mod.rs  validated_form.rs  validated_json.rs  validated_query.rs
src/interfaces/src/controller/: auth.rs  corn_job.rs  mod.rs  sys.rs  user.rs
src/interfaces/src/middlewares/: auth.rs  mod.rs  operate_log.rs  operater_log.rs  request_log.rs
src/interfaces/src/routes/: mod.rs  router_group.rs  sys.rs
src/interfaces/src/types/: auth_jwt.rs  corn_job.rs  mod.rs  user_info.rs
src/logs/: access.2025-09-24
src/query/: Cargo.toml
src/query/src/: lib.rs
src/query/src/corn_job/: api.rs  entity.rs  mod.rs  services.rs
src/query/src/entity/: mod.rs
