[package]
name = "vela"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "1.7.0"
once_cell = "1.21.3"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_variant = "0.1.3"
serde_yaml = "0.9.34"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }

tracing = "0.1.41"
# 将 Rust 的错误类型与 Tracing 的 span 相关联的库
# 当出现错误时，通常希望能将错误的发生与当时的执行上下文（也就是 tracing 所记录的 span 相关信息）结合起来，以便更好地理解错误产生的背景和原因
tracing-error = "0.2.0"
# 配置和管理 tracing 所产生的日志和追踪数据的收集、格式化以及输出等操作
tracing-subscriber = { version = "0.3.20", default-features = true, features = [
  "std",
  "env-filter",
  "registry",
  "local-time",
  "fmt",
] }
# 处理日志数据的写入目标和写入方式
tracing-appender = "0.2.3"
# 用于将 Rust 标准库中的 log 宏记录的日志与 tracing 库的日志记录机制进行集成，使得使用 log 宏编写的旧有日志记录代码能够无缝地与基于 tracing 的新日志系统协同工作，方便在项目迁移或者同时使用两种日志记录方式的场景下进行统一管理和输出
tracing-log = "0.2.0"
chrono = "0.4.42"

[dev-dependencies]
tempfile = "3.10.1"
