[workspace]
resolver = "2"

members = [
  "bin",
  "migration",
  "src/common",
  "src/domain/job",
  "src/domain/operater_log",
  "src/domain/user",
  "src/infrastructure",
  "src/interfaces",
]
exclude = ["db", "tools"]
default-members = ["bin"]

[workspace.dependencies]
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "json",
  "local-time",
  "registry",
] }
tracing-appender = "0.2.4"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_variant = "0.1.3"
serde_yaml = "0.9.34"
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.89"
chrono = "0.4.42"
once_cell = "1.21.3"
tokio-cron-scheduler = "0.15.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
hyper = "1.8.1"
argon2 = "0.5.3"
rand = "0.9.2"
sha2 = "0.10.9"
convert_case = "0.10.0"
sea-orm = { version = "1.1.19", features = [
  "sqlx-postgres",
  # "sqlx-sqlite",
  # "sqlx-mysql",
  "runtime-tokio-rustls",
  "macros",
] }
bb8 = "0.9.1"
bb8-redis = "0.26.0"
captcha_rust = "0.1.3"
jsonwebtoken = "9.3.1"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
http-body-util = "0.1.3"
byte-unit = "5.2.0"
axum = { version = "0.8.7", default-features = true }
tower-http = { version = "0.6.8", features = ["full"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
headers = "0.4.1"
dashmap = "6.1.0"

[profile.dev]
opt-level = 1
split-debuginfo = "unpacked"
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 16

# [build]
# rustc-wrapper = "~/rust/Vela/sccache"
