[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.16"
hyper = "1.7.0"
tracing = "0.1.41"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
bb8-redis = "0.24.0"
bb8 = "0.9.0"
validator = { version = "0.20.0", features = ["derive"] }
