[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
hyper = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bb8-redis = { workspace = true }
bb8 = { workspace = true }
validator = { workspace = true }
