[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
hyper = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
validator = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
serde_variant = { workspace = true }
sea-orm = { workspace = true }
