[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
commonx = { package = "common", path = "../common" }
user_domain = { package = "user_domain", path = "../domain/user" }


once_cell = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde_variant = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
async-trait = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
convert_case = { workspace = true }
