[package]
name = "interfaces"
version = "0.1.0"
edition = "2024"

[dependencies]
# 系统依赖
infrastructurex = { package = "infrastructure", path = "../infrastructure" }
commonx = { package = "common", path = "../common" }
userDomain = { package = "user_domain", path = "../domain/user" }
jobDomain = { package = "job_domain", path = "../domain/job" }
operaterLogDomain = { package = "operater_log_domain", path = "../domain/operater_log" }

queryx = { package = "query", path = "../query" }


tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
headers = { workspace = true }
axum-extra = { workspace = true }
http-body-util = { workspace = true }
byte-unit = { workspace = true }
axum-server = { workspace = true }
validator = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_variant = { workspace = true }
serde_yaml = { workspace = true }
jsonwebtoken = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
