[package]
name = "query"
version = "0.1.0"
edition = "2024"

[dependencies]
commonx = { package = "common", path = "../common" }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
