[package]
name = "user"
version = "0.1.0"
edition = "2024"

[dependencies]
infrastructurex = { package = "infrastructure", path = "../../infrastructure" }
commonx = { package = "common", path = "../../common" }


async-trait = "0.1.89"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
captcha_rust = "0.1.3"
tracing = "0.1.41"
dynify = "0.1.2"
