[package]
name = "user_domain"
version = "0.1.0"
edition = "2024"

[dependencies]
commonx = { package = "common", path = "../../common" }


async-trait = "0.1.89"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
captcha_rust = "0.1.3"
tracing = "0.1.41"
dynify = "0.1.2"
chrono = "0.4.42"
thiserror = "2.0.17"
typemap = "0.3.3"
