[package]
name = "persistence"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"

sea-orm = { version = "1.1.16", features = [
  # "sqlx-postgres",
  # "sqlx-sqlite",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "macros",
] }

loggerx = { package = "logger", path = "../logger" }
cachex = { package = "cache", path = "../cache" }
configx = { package = "config", path = "../config" }
commonx = { package = "common", path = "../../common" }
tracing = "0.1.41"
